@@ -1,3 +1,7 @@
+2013-01-21 17:53  chrox
+
+	* add a lipc interface on dictionary backend
+
 2013-01-21 00:11  chrox
 
 	* open txt and html documents with native reader
